Fix createPerkChoices()