@@ -1,7 +1,11 @@
 # About This Project
 - This project was created for our **Final Project** in *Programming Methodology (Year 1 Semester 2)* by me and [Napongthorn Charoenlap].
+- OpenJFX 20.0.2
 - The project was developed using **Java**.
 
 ## Preview
 - Watch the [preview on YouTube](https://youtu.be/WqLh7IHoWOo).
 - For further details, please read the [Pixel_Saga_Documentation.pdf](./Pixel_Saga_Documentation.pdf).
+
+## Path Configuration
+--module-path ...\Downloads\openjfx-20.0.2_windows-x64_bin-sdk\javafx-sdk-20.0.2\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media
